[fix] looked horrible on mobile

--- a/style.css
+++ b/style.css
@@ -145,3 +145,28 @@ footer {
   text-align: center;
   font-size: 20px;
 }
+
+
+
+@media screen and (max-width: 1024px) {
+  h1 { font-size: 96px; }
+  h2 { font-size: 48px; }
+  h3 { font-size: 32px; }
+  h4 { font-size: 24px; }
+  h5 { font-size: 20px; }
+  h6 { font-size: 16px; }
+  
+  body {
+    font-size: 24px;
+    padding: 16px;
+    padding-bottom: 64px;
+  }
+
+  #about {
+    flex-direction: column;
+  }
+
+  #intro {
+    max-width: none;
+  }
+}
